--- a/theseus/index.html
+++ b/theseus/index.html
@@ -70,7 +70,10 @@
 <hr>
 <div id="content">
 <div class="container">
-<p style="display:inline-block;">Welcome to the website ... </p>
+<p style="display:inline-block;">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can fin supplemental material, such as data, code, and references.<br>
+Provides a comprehensive analysis of Chile’s political evolution: Explores systemic changes in new democracies<br>
+Examines constitutional development: Identifies the perils of structural overhaul amidst social and economic instability<br>
+Offers global lessons for reform: Provides insight for policymakers on achieving equitable outcomes in complex systems<br></p>
 
 <hr>
 
@@ -83,6 +86,17 @@
   </p>
 </div>
 
+<hr>
+
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+  <p style="margin: 0;">
+    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
+    THE THESEUS PARADOX</strong><br>
+    CHAPTER 1<br><br>
+    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
+  </p>
+</div>
 
 <hr>
 
