--- a/theseus/index.html
+++ b/theseus/index.html
@@ -69,13 +69,20 @@
 </div>
 <hr>
 <div id="content">
-<div class="container">
-<p style="display:inline-block;">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can fin supplemental material, such as data, code, and references.<br>
-Provides a comprehensive analysis of Chile’s political evolution: Explores systemic changes in new democracies<br>
-Examines constitutional development: Identifies the perils of structural overhaul amidst social and economic instability<br>
-Offers global lessons for reform: Provides insight for policymakers on achieving equitable outcomes in complex systems<br></p>
+  <div class="container">
+    <p style="display:inline-block;">
+      Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.<br><br>
 
+      • Provides a comprehensive analysis of Chile’s political evolution: Explores systemic changes in new democracies<br>
+      • Examines constitutional development: Identifies the perils of structural overhaul amidst social and economic instability<br>
+      • Offers global lessons for reform: Provides insight for policymakers on achieving equitable outcomes in complex systems<br><br>
+
+      <strong>About this book:</strong> This book is a comprehensive analysis of Chile's political and economic evolution, particularly focusing on the challenges of constitutional reform and systemic overhaul in emerging democracies. It explores themes of neoliberalism, governance, and reform under instability, using Chile as a case study to illuminate the broader implications for countries in the Global South. Drawing on institutional theory, political economy, original data, and comparative analysis, it unpacks the roots of Chile’s crisis: party system fragmentation, voter–party erosion, rupturist rhetoric, and elite misdiagnoses. It is relevant to scholars, policymakers, and risk analysts seeking to understand the complexities of democratic transitions, offering lessons on balancing the rewards of change with the risks of instability. At its core, the book sets out to solve the problem of how to effectively implement constitutional and systemic reforms in a way that promotes stability, equity, and long-term success.
+    </p>
+  </div>
+</div>
 <hr>
+
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
