--- a/theseus/index.html
+++ b/theseus/index.html
@@ -69,17 +69,6 @@
 </div>
 <hr>
 
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
-  <p style="margin: 0;">
-    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br><br>
-    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
-  </p>
-</div>
-
-<hr>
-
 <div id="content">
   <div class="container">
     <p style="display:inline-block;">
@@ -89,14 +78,12 @@
       • <strong>Examines constitutional development:</strong> Identifies the perils of structural overhaul amidst social and economic instability<br>
       • <strong>Offers global lessons for reform:</strong> Provides insight for policymakers on achieving equitable outcomes in complex systems<br><br>
 
-      <strong>About this book:</strong> This book is a comprehensive analysis of Chile's political and economic evolution, particularly focusing on the challenges of constitutional reform and systemic overhaul in emerging democracies. It explores themes of neoliberalism, governance, and reform under instability, using Chile as a case study to illuminate the broader implications for countries in the Global South. Drawing on institutional theory, political economy, original data, and comparative analysis, it unpacks the roots of Chile’s crisis: party system fragmentation, voter–party erosion, rupturist rhetoric, and elite misdiagnoses. It is relevant to scholars, policymakers, and risk analysts seeking to understand the complexities of democratic transitions, offering lessons on balancing the rewards of change with the risks of instability. At its core, the book sets out to solve the problem of how to effectively implement constitutional and systemic reforms in a way that promotes stability, equity, and long-term success.
+      <strong>About this:</strong> This book is a comprehensive analysis of Chile's political and economic evolution, particularly focusing on the challenges of constitutional reform and systemic overhaul in emerging democracies. It explores themes of neoliberalism, governance, and reform under instability, using Chile as a case study to illuminate the broader implications for countries in the Global South. Drawing on institutional theory, political economy, original data, and comparative analysis, it unpacks the roots of Chile’s crisis: party system fragmentation, voter–party erosion, rupturist rhetoric, and elite misdiagnoses. It is relevant to scholars, policymakers, and risk analysts seeking to understand the complexities of democratic transitions, offering lessons on balancing the rewards of change with the risks of instability. At its core, the book sets out to solve the problem of how to effectively implement constitutional and systemic reforms in a way that promotes stability, equity, and long-term success.
     </p>
   </div>
 </div>
 
 <hr>
-
-
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
