--- a/theseus/index.html
+++ b/theseus/index.html
@@ -85,7 +85,7 @@
 
 <hr>
 
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
@@ -96,7 +96,7 @@
 
 <hr>
 
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br>
@@ -108,7 +108,7 @@
 
 <hr>
 
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
