--- a/theseus/index.html
+++ b/theseus/index.html
@@ -87,8 +87,7 @@
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
-    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br><br>
+    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
     <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
