--- a/theseus/index.html
+++ b/theseus/index.html
@@ -113,7 +113,6 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">ABSTRACT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
@@ -121,37 +120,12 @@
 
     <div style="text-align: left; max-width: 600px; margin: 0 auto;">
       <p style="font-size: 14px; line-height: 1.6;">
-        This chapter provides a comprehensive framework for understanding Chile's transition from a model of political and economic stability to a case study of social upheaval, institutional crisis, and failed constitutional reform. It introduces the central narrative of the book, beginning with the October 2019 protests and the subsequent constitutional process, which culminated in the rejection of two proposed constitutions—one in September 2022 and another in December 2023. By situating Chile’s experience within a broader theoretical and comparative context, the chapter highlights its significance for analyzing the challenges of pursuing systemic reform under unstable conditions. The book’s core thesis contends that Chile’s crisis did not originate from inherent flaws in its economic model or institutional framework. Instead, it arose from the fragmentation of its party system, the erosion of voter–party linkages, and the rupturist rhetoric advanced by an elite willing to do whatever it took to gain power. The chapter also advances the idea that ideological overreach and the failure to appeal to the median voter contributed to the collapse of the greater constitutional process. Finally, the chapter outlines the structure of the book, detailing its theoretical foundations, its guiding questions, and a summary of each of the subsequent chapters, explaining their purpose, their respective contributions, and their place in the overarching theory. Keywords. Chile; Political Crisis; Social Protests; Neoliberalism; Social Outburst; Constitutional Reform.
+        <strong>Abstract:</strong> This chapter provides a comprehensive framework for understanding Chile's transition from a model of political and economic stability to a case study of social upheaval, institutional crisis, and failed constitutional reform. It introduces the central narrative of the book, beginning with the October 2019 protests and the subsequent constitutional process, which culminated in the rejection of two proposed constitutions—one in September 2022 and another in December 2023. By situating Chile’s experience within a broader theoretical and comparative context, the chapter highlights its significance for analyzing the challenges of pursuing systemic reform under unstable conditions. The book’s core thesis contends that Chile’s crisis did not originate from inherent flaws in its economic model or institutional framework. Instead, it arose from the fragmentation of its party system, the erosion of voter–party linkages, and the rupturist rhetoric advanced by an elite willing to do whatever it took to gain power. The chapter also advances the idea that ideological overreach and the failure to appeal to the median voter contributed to the collapse of the greater constitutional process. Finally, the chapter outlines the structure of the book, detailing its theoretical foundations, its guiding questions, and a summary of each of the subsequent chapters, explaining their purpose, their respective contributions, and their place in the overarching theory. <br>
+
+        <strong>Keywords:</strong>Chile; Political Crisis; Social Protests; Neoliberalism; Social Outburst; Constitutional Reform.
     </div>
   </p>
 </div>
-
-
-<hr>
-
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
-  <p style="margin: 0;">
-    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br>
-    CHAPTER 2<br><br>
-    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – NOVEMBER 2025
-  </p>
-</div>
-
-
-<hr>
-
-<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
-  <p style="margin: 0;">
-    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br>
-    CHAPTER 3<br><br>
-    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
-  </p>
-</div>
-
 
 <hr>
 <h2 id="links">Links</h2>
