--- a/theseus/index.html
+++ b/theseus/index.html
@@ -133,7 +133,7 @@
         <strong>Keywords:</strong>Chile; Political Crisis; Social Protests; Neoliberalism; Social Outburst; Constitutional Reform.
     </div>
   </p>
-</div>
+
 
 <hr>
 <h2 id="links">Links</h2>
@@ -142,7 +142,7 @@
 
 <hr>
 
-</div>
+</div></div>
 
         </div><div id="footer" class="mb-5">
     
