--- a/theseus/index.html
+++ b/theseus/index.html
@@ -73,6 +73,8 @@
   <div class="container">
     <p style="display:inline-block;"><br><br>
 
+      <strong>Chile's Transformation Amidst Crisis: The Theseus Paradox</strong> <br><br>
+
       Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.<br><br>
 
       <hr>
