--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ mark {
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide.</p>
+<p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and risk analysts worldwide.</p>
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
