--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ mark {
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
     <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – OUT: NOVEMBER 7 2025
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – 7 NOVEMBER 2025
   </p>
 </div>
 
