--- a/theseus/index.html
+++ b/theseus/index.html
@@ -112,6 +112,7 @@
     <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
+</div>
 
 <hr>
 
