--- a/theseus/index.html
+++ b/theseus/index.html
@@ -132,7 +132,7 @@
     <a href="https://www.barnesandnoble.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Barnes_%26_Noble_logo.svg" alt="Barnes & Noble" style="height: 40px;"></a>
     <a href="https://www.waterstones.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Waterstones_logo.svg" alt="Waterstones" style="height: 40px;"></a>
     <a href="https://www.bookdepository.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/3/3c/The_Book_Depository_logo.svg" alt="Book Depository" style="height: 40px;"></a>
-    <a href="https://www.books.com.tw" target="_blank"><img src="https://fakeimg.pl/140x40/?text=Books.com.tw" alt="Books Taiwan" style="height: 40px;"></a>
+    <a href="https://www.books.com.tw" target="_blank"><img src="https://jci.book.com.tw/css/header/images/books_logo_185x52.png" alt="Books Taiwan" style="height: 40px;"></a>
     <a href="https://www.indigo.ca" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Indigo_Logo.svg" alt="Indigo" style="height: 40px;"></a>
     <a href="https://www.walmart.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Walmart_logo.svg" alt="Walmart" style="height: 40px;"></a>
     <a href="https://www.brownbooks.com" target="_blank"><img src="https://fakeimg.pl/140x40/?text=Brown+Books" alt="Brown Books" style="height: 40px;"></a>
