--- a/theseus/index.html
+++ b/theseus/index.html
@@ -130,8 +130,8 @@
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px;">
     <a href="https://www.amazon.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon" style="height: 40px;"></a>
     <a href="https://www.barnesandnoble.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Barnes_%26_Noble_logo.svg" alt="Barnes & Noble" style="height: 40px;"></a>
-    <a href="https://www.waterstones.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Waterstones_logo.svg" alt="Waterstones" style="height: 40px;"></a>
-    <a href="https://www.bookdepository.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/3/3c/The_Book_Depository_logo.svg" alt="Book Depository" style="height: 40px;"></a>
+    <a href="https://www.waterstones.com" target="_blank"><img src="https://blogs.kent.ac.uk/employabilitypoints/files/2018/08/waterstones-hi-res.png" alt="Waterstones" style="height: 40px;"></a>
+    <a href="https://www.bookdepository.com" target="_blank"><img src="https://logowik.com/content/uploads/images/book-depository7933.jpg" alt="Book Depository" style="height: 40px;"></a>
     <a href="https://www.books.com.tw" target="_blank"><img src="https://jci.book.com.tw/css/header/images/books_logo_185x52.png" alt="Books Taiwan" style="height: 40px;"></a>
     <a href="https://www.indigo.ca" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Indigo_Logo.svg" alt="Indigo" style="height: 40px;"></a>
     <a href="https://www.walmart.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Walmart_logo.svg" alt="Walmart" style="height: 40px;"></a>
