--- a/theseus/index.html
+++ b/theseus/index.html
@@ -92,8 +92,10 @@
       <strong>About this book</strong> <br><br>
 
 
-      • Provides a comprehensive analysis of Chile’s political evolution: Explores systemic changes in new democracies<br>
-      • Examines constitutional development: Identifies the perils of structural overhaul amidst social and economic instability<br>
+      • Provides a comprehensive analysis of Chile’s political evolution: Explores systemic changes in new democracies<br><br>
+
+      • Examines constitutional development: Identifies the perils of structural overhaul amidst social and economic instability<br><br>
+      
       • Offers global lessons for reform:Provides insight for policymakers on achieving equitable outcomes in complex systems<br><br>
 
       <hr>
