--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ mark {
 <ul>
 
 
+<p>2025.“Challenging Conventional Wisdom in New Democracies: Social Diversity, Electoral Rules, and Party System Fragmentation in Chile.”<em>Election Law Journal: Rules, Politics, and Policy</em>. <a href="https://doi.org/10.1089/elj.2024.0064">doi</a></mark></p>
+
 <p>2025.“Electoral Forecasting in Volatile Party System Settings: Assessing and Improving Pre-Election Poll Predictions in Italy.”<em>Social Science Computer Review</em>. <a href="https://doi.org/10.1177/08944393251328309">doi</a></mark></p>
 
 <p>2025.“Mapping party systems over time: A spatial distribution of ideological competition in Chile.”<em>Journal of Political Ideologies</em>. <a href="https://doi.org/10.1080/13569317.2025.2452179">doi</a></mark></p>
