--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ mark {
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
-    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
+    <a href="https://kennethbunker.github.io/theseus/" target="_blank">
+      <img src="../img/book1.png" alt="USS" width="170" height="170" style="border: none;">
+    </a><br><br>
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – 7 NOVEMBER 2025
   </p>
 </div>
