--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@ mark {
 }
 </style>  
 
-<meta property="og:title" content="Kenneth Bunker" />
+<!-- SEO + Social Sharing Meta Tags for Landing Page -->
+<meta property="og:title" content="Kenneth Bunker – Political Scientist & Author" />
+<meta property="og:description" content="Kenneth Bunker is a political scientist, academic, and consultant. Visit his official site for research, media, and publications." />
 <meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
-<meta property="og:description" content="Kenneth Bunker " />
-<meta property="og:site_name" content="Kenneth Bunker: Personal Website." />
+<meta property="og:url" content="https://kennethbunker.github.io/" />
+<meta property="og:site_name" content="Kenneth Bunker – Official Website" />
+<meta property="og:type" content="website" />
 
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Kenneth Bunker – Political Scientist & Author" />
+<meta name="twitter:description" content="Explore Kenneth Bunker's research, articles, and updates on his latest work in political science." />
+<meta name="twitter:image" content="https://kennethbunker.github.io/me1.png" />
 </head>
 
     <body><div class="container mt-5">
