--- a/theseus/index.html
+++ b/theseus/index.html
@@ -31,6 +31,21 @@
         margin-right: auto;
       }
     </style>  
+
+<!-- Social Sharing Meta Tags for Book Page -->
+<meta property="og:title" content="Chile's Transformation Amidst Crisis: The Theseus Paradox – Kenneth Bunker" />
+<meta property="og:description" content="Explore Kenneth Bunker's new book on Chile's political evolution and constitutional reform. Pre-order now from Springer and other retailers." />
+<meta property="og:image" content="https://kennethbunker.github.io/img/book1.png" />
+<meta property="og:url" content="https://kennethbunker.github.io/theseus/" />
+<meta property="og:site_name" content="Kenneth Bunker – Official Site" />
+<meta property="og:type" content="book" />
+
+<!-- Twitter Card Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="The Theseus Paradox – Kenneth Bunker's New Book" />
+<meta name="twitter:description" content="A detailed study of Chile’s crisis and political transformation. Available for pre-order now." />
+<meta name="twitter:image" content="https://kennethbunker.github.io/img/book1.png" />
+<meta name="twitter:site" content="@kennethbunker" /> <!-- Update if you have a different handle -->
     
 </head>
 
