--- a/theseus/index.html
+++ b/theseus/index.html
@@ -32,6 +32,9 @@
       }
     </style>  
 
+<!-- SEO Keywords -->
+<meta name="keywords" content="Kenneth Bunker, Theseus Paradox, Chile politics book, Chile constitutional crisis, Latin American political science, democratic reform, Chile transformation, new book on Chile, Springer political books, Chile constitutional reform, neoliberalism in Chile, crisis in emerging democracies, political science 2025, global south democracy" />
+
 <!-- Social Sharing Meta Tags for Book Page -->
 <meta property="og:title" content="Chile's Transformation Amidst Crisis: The Theseus Paradox – Kenneth Bunker" />
 <meta property="og:description" content="Explore Kenneth Bunker's new book on Chile's political evolution and constitutional reform. Pre-order now from Springer and other retailers." />
@@ -45,8 +48,8 @@
 <meta name="twitter:title" content="The Theseus Paradox – Kenneth Bunker's New Book" />
 <meta name="twitter:description" content="A detailed study of Chile’s crisis and political transformation. Available for pre-order now." />
 <meta name="twitter:image" content="https://kennethbunker.github.io/img/book1.png" />
-<meta name="twitter:site" content="@kennethbunker" /> <!-- Update if you have a different handle -->
-    
+<meta name="twitter:site" content="@kennethbunker" />
+
 </head>
 
     <body><div class="container mt-5">
