--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ mark {
 
 <!-- SEO + Social Sharing Meta Tags for Landing Page -->
 <meta property="og:title" content="Kenneth Bunker – Political Scientist & Author" />
-<meta property="og:description" content="Kenneth Bunker is a political scientist, academic, and consultant. Visit his official site for research, media, and publications." />
+<meta property="og:description" content="Kenneth Bunker is a political scientist, academic, and consultant." />
 <meta property="og:image" content="https://kennethbunker.github.io/me2.png" />
 <meta property="og:url" content="https://kennethbunker.github.io/" />
 <meta property="og:site_name" content="Kenneth Bunker – Official Website" />
