--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ mark {
 <!-- SEO + Social Sharing Meta Tags for Landing Page -->
 <meta property="og:title" content="Kenneth Bunker – Political Scientist & Author" />
 <meta property="og:description" content="Kenneth Bunker is a political scientist, academic, and consultant." />
-<meta property="og:image" content="https://kennethbunker.github.io/me2.png" />
+<meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
 <meta property="og:url" content="https://kennethbunker.github.io/" />
 <meta property="og:site_name" content="Kenneth Bunker – Official Website" />
 <meta property="og:type" content="website" />
@@ -72,7 +72,7 @@ mark {
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Kenneth Bunker – Political Scientist & Author" />
 <meta name="twitter:description" content="Explore Kenneth Bunker's research, articles, and updates on his latest work in political science." />
-<meta name="twitter:image" content="https://kennethbunker.github.io/me2.png" />
+<meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
 </head>
 
