--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@ mark {
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
                         Columns
-                    </a>              
+                    </a>
+                        <span class="nav-item navbar-text mx-1">/</span>
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">
+                        Book
+                    </a>                                    
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
@@ -125,12 +129,12 @@ mark {
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
-    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br><br>
+    <strong>Chile's Trnasformation Amidst Crisis:<br>
+    The Theseus Paradox</strong><br><br>
     <a href="https://kennethbunker.github.io/theseus/" target="_blank">
       <img src="../img/book1.png" alt="USS" width="170" height="170" style="border: none;">
     </a><br><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – 7 NOVEMBER 2025
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
   </p>
 </div>
 
