--- a/theseus/index.html
+++ b/theseus/index.html
@@ -97,12 +97,16 @@
 
       <hr>
 
-        <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
-          <p style="margin: 0;">
-            <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-            <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
-            NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
-          </p>
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+  <p style="margin: 0;">
+    <strong>Chile's Trnasformation Amidst Crisis:<br>
+    The Theseus Paradox</strong><br><br>
+    <a href="https://kennethbunker.github.io/theseus/" target="_blank">
+      <img src="../img/book1.png" alt="USS" width="170" height="170" style="border: none;">
+    </a><br><br>
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
+  </p>
+  
         </div>
 
 <hr>
