--- a/press/index.html
+++ b/press/index.html
@@ -34,10 +34,7 @@
           Kenneth Bunker
         </a>
         <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
-                        About
-                    </a>           
-                        <span class="nav-item navbar-text mx-1">/</span>        
+    
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
                         CV
                     </a>
@@ -52,11 +49,15 @@
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
                         Columns
-                    </a>              
+                    </a>
+                        <span class="nav-item navbar-text mx-1">/</span>
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">
+                        Book
+                    </a>                                    
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
-                    </a>        
+                    </a>  
         </div>
     </nav>
 </div>
