--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ mark {
 }
 </style>  
 
+<!-- SEO Keywords -->
+<meta name="keywords" content="Kenneth Bunker, Theseus Paradox, Chile politics book, Chile constitutional crisis, Latin American political science, democratic reform, Chile transformation, new book on Chile, Springer political books, Chile constitutional reform, neoliberalism in Chile, crisis in emerging democracies, political science 2025, global south democracy" />
+
 <!-- SEO + Social Sharing Meta Tags for Landing Page -->
 <meta property="og:title" content="Kenneth Bunker – Political Scientist & Author" />
 <meta property="og:description" content="Kenneth Bunker is a political scientist, academic, and consultant." />
@@ -126,7 +129,7 @@ mark {
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
-    <strong>Chile's Trnasformation Amidst Crisis:<br>
+    <strong>Chile's Transformation Amidst Crisis:<br>
     The Theseus Paradox</strong><br><br>
     <a href="https://kennethbunker.github.io/theseus/" target="_blank">
       <img src="../img/book1.png" alt="USS" width="170" height="170" style="border: none;">
