--- a/theseus/index.html
+++ b/theseus/index.html
@@ -100,7 +100,7 @@
 
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
-    <strong>Chile's Trnasformation Amidst Crisis:<br>
+    <strong>Chile's Transformation Amidst Crisis:<br>
     The Theseus Paradox</strong><br><br>
     <a href="https://kennethbunker.github.io/theseus/" target="_blank">
       <img src="../img/book1.png" alt="USS" width="170" height="170" style="border: none;">
