--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   "jobTitle": "Political Scientist",
   "affiliation": {
     "@type": "Organization",
-    "name": "Democracy and Government Lab"
+    "name": "Tresquintos"
   },
   "url": "https://kennethbunker.github.io",
   "description": "Political scientist, academic, and columnist focused on democratic reform and political analysis in Latin America.",
@@ -96,9 +96,22 @@
     "https://uss.academia.edu/KennethBunker",
     "https://www.researchgate.net/profile/Kenneth-Bunker",
     "https://mepop.cl/equipo/kenneth-bunker/"
+  ],
+  "hasCredential": [
+    {
+      "@type": "EducationalOccupationalCredential",
+      "credentialCategory": "PhD",
+      "educationalLevel": "Doctorate",
+      "recognizedBy": {
+        "@type": "CollegeOrUniversity",
+        "name": "London School of Economics"
+      },
+      "name": "PhD in Political Science"
+    }
   ]
 }
 </script>
+
 
 
     <body><div class="container mt-5">
