--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
 <!-- Structured Data (Schema.org) -->
+<!-- Structured Data (Schema.org) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -83,7 +84,8 @@
   "jobTitle": "Political Scientist",
   "affiliation": {
     "@type": "Organization",
-    "name": "Tresquintos"
+    "name": "Tresquintos",
+    "url": "https://tresquintos.cl"
   },
   "url": "https://kennethbunker.github.io",
   "description": "Political scientist, academic, and columnist focused on democratic reform and political analysis in Latin America.",
@@ -111,6 +113,7 @@
   ]
 }
 </script>
+
 
 
 
