--- a/theseus/index.html
+++ b/theseus/index.html
@@ -164,6 +164,9 @@
 
    <a href="https://www.orellfuessli.ch/shop/home/artikeldetails/A1075361227" target="_blank"><img src="https://cdn.bravo-savings-network.com/cdn2/merchant/logo/sqr/lg/orell-fuessli-20231128092647-logo@2x.png" alt="Orell Fuessli" style="height: 40px;"></a>
 
+  <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=364535612" target="_blank"><img src="https://image.aladin.co.kr/img/header/2023/aladin_logo.jpg" alt="Aladin" style="height: 40px;"></a>
+
+
   </div>
 </div>
 
