--- a/theseus/index.html
+++ b/theseus/index.html
@@ -167,7 +167,10 @@
   <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=364535612" target="_blank"><img src="https://image.aladin.co.kr/img/header/2023/aladin_logo.jpg" alt="Aladin" style="height: 40px;"></a>
 
   <a href="https://www.hugendubel.info/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank"><img src="https://www.hugendubel.info/htdyn/BMHMH24JZ4O/logo-large.webp" alt="Aladin" style="height: 40px;"></a>
-  
+
+   <a href="https://academia.schreibers.ch/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank"><img src="https://academia.schreibers.ch/htdyn/BKZ9GRC9OP/logo-large.webp" alt="Aladin" style="height: 40px;"></a>
+
+    
   </div>
 </div>
 
