--- a/lun/index.html
+++ b/lun/index.html
@@ -99,8 +99,8 @@ gap: 5px;
 <img src="/img/lun/20250429.jpeg">
 <img src="/img/lun/20250425.jpeg">
 <img src="/img/lun/20250412.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250602.jpeg">
+<img src="/img/lun/20250606.jpeg">
 </div>
 
 
