--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
 </figure>
 <p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastián University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
 
+<hr>
+
+<p>Click<a href="https://kennethbunker.github.io/columns"> here </a>to read my columns in the press.
+
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>Chile's Transformation Amidst Crisis:<br>
@@ -229,10 +233,6 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 </ul>
 <hr>
 <p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">X</a>!</p>
-
-<hr>
-
-<p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
 <hr>
 
