--- a/theseus/index.html
+++ b/theseus/index.html
@@ -170,6 +170,8 @@
 
    <a href="https://academia.schreibers.ch/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank"><img src="https://academia.schreibers.ch/htdyn/BKZ9GRC9OP/logo-large.webp" alt="Aladin" style="height: 40px;"></a>
 
+   <a href="https://www.thriftbooks.com/w/chiles-transformation-amidst-crisis-the-theseus-paradox-latin-american-political-economy/55653229/#edition=73417334&idiq=85045243" target="_blank"><img src="https://static.thriftbooks.com/images/tblogo-green_20200225.svg" alt="Thirft Books" style="height: 40px;"></a>
+
 
   </div>
 </div>
