--- a/theseus/index.html
+++ b/theseus/index.html
@@ -172,6 +172,8 @@
 
    <a href="https://www.thriftbooks.com/w/chiles-transformation-amidst-crisis-the-theseus-paradox-latin-american-political-economy/55653229/#edition=73417334&idiq=85045243" target="_blank"><img src="https://static.thriftbooks.com/images/tblogo-green_20200225.svg" alt="Thirft Books" style="height: 40px;"></a>
 
+   <a href="https://books.google.it/books/about/Chile_s_Transformation_Amidst_Crisis.html?id=0CBf0QEACAAJ&source=kp_book_description&redir_esc=y" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Google_Books_logo_2015.svg/1200px-Google_Books_logo_2015.svg.png" alt="Google" style="height: 40px;"></a>
+
 
   </div>
 </div>
