--- a/columns/index.html
+++ b/columns/index.html
@@ -119,6 +119,19 @@ mark {
 <hr>
 <ul>
 
+
+<li>20250618 - La grieta en el modelo</li>  
+<li>20250610 - Tiempos dificiles</li>  
+<li>20250606 - Reserva moral</li>  
+<li>20250602 - Ilusión</li>  
+<li>20250524 - Sobre la igualdad</li>  
+<li>20250523 - Hasta el último peso</li>  
+<li>20250516 - La fuerza de la tradición</li>  
+<li>20250509 - La anunciada inestabilidad</li>  
+<li>20250508 - El desfonde</li>  
+<li>20250429 - El bluff</li>  
+<li>20250425 - Martinez y Marcel</li>  
+<li>20250412 - El tono importa</li>  
 <li>20250404- El crespúsculo del ídolo</li>  
 <li>20250328- ¿Diablos por conocer?</li>  
 <li>20250327 - El país necesita garantías</li>  
@@ -489,10 +502,20 @@ mark {
 <ul>
 
 
+<li>20250613 - De relato a resultado, llegó la hora de responder </li>
+<li>20250606 - Cuando vuelvan las veredas picadas</li>
+<li>20250530 - Boric en el país de las maravillas</li>
+<li>20250523 - La nueva clase gobernante</li>
+<li>20250516 - La degradación de la democracia</li>
+<li>20250509 - El lio de Boric</li>
+<li>20250502 - Doctrina de violencia</li>
+<li>20250418 - Primarias o no primarias</li>
+<li>20250411 - La candidata Jara y la democracia cubana</li>
+<li>20250404 - Diescisiete firmas</li>
 <li>20250330 - La ironía que subyace al nuevo ministerio de Seguridad</li>
 <li>20250323 - El baile de Boric y Jara y el compositor José Piñera</li>
 <li>20250309 - Tres años de dogma</li>
-<li>20250302 - Por qué una candidatura de Carolina Tohá ayuda a la derecha tanto como a Boric</li>
+<li>20250302 - Por qué Carolina Tohá ayuda a la derecha tanto como a Boric</li>
 <li>20250222 - Rendezvous: El retorno de Bachelet</li>
 <li>20250125 - Kaiser: El outsider de la derecha</li>
 <li>20250116 - Entre la sospecha y el progreso: el futuro de las pensiones</li>
