--- a/columns/index.html
+++ b/columns/index.html
@@ -1,29 +1,60 @@
-<!DOCTYPE html>
-<html><head>
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  gtag('config', 'G-XHPPDNKH57');
-</script>
+  <title>Political Columns by Kenneth Bunker – Chilean Politics & Democracy</title>
+  <meta name="description" content="Kenneth Bunker's political columns published in Ex-Ante, La Tercera, CIPER, and more. Analysis on Chilean democracy, elections, and political reform.">
+  <meta name="author" content="Kenneth Bunker">
+  <meta name="keywords" content="Kenneth Bunker, Chilean politics, political columns Chile, Chilean democracy, Latin America political opinion, Ex-Ante, La Tercera, CIPER, electoral reform Chile">
 
-   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kennethbunker.github.io/columns" />
 
-    <title>Columns - Kenneth Bunker</title>
-    <meta name="description" content="Academic, Consultant, Columnist">
-    <meta name="author" content='Kenneth Bunker'>
+  <!-- Google Fonts & Stylesheets -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Political Columns by Kenneth Bunker – Chilean Politics & Democracy" />
+  <meta property="og:description" content="Explore Kenneth Bunker's published columns on Chilean democracy, elections, and political reform in leading national outlets." />
+  <meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
+  <meta property="og:url" content="https://kennethbunker.github.io/columns" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Kenneth Bunker – Political Scientist & Columnist" />
 
-    
-    <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kenneth Bunker's Columns – Chilean Politics & Analysis" />
+  <meta name="twitter:description" content="Read Kenneth Bunker's expert commentary on Chilean politics, democracy, and public reform." />
+  <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Columns by Kenneth Bunker",
+    "description": "Kenneth Bunker’s columns published in Chilean media outlets including Ex-Ante, CIPER, and La Tercera. Focused on democracy, political science, and electoral reform.",
+    "url": "https://kennethbunker.github.io/columns",
+    "author": {
+      "@type": "Person",
+      "name": "Kenneth Bunker",
+      "url": "https://kennethbunker.github.io"
+    }
+  }
+  </script>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XHPPDNKH57');
+  </script>
 </head>
+
 
  <style>    
  body {
@@ -58,11 +89,6 @@ mark {
   color: black;
 }
 </style>  
-
-<meta property="og:title" content="Kenneth Bunker" />
-<meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
-<meta property="og:description" content="Kenneth Bunker " />
-<meta property="og:site_name" content="Kenneth Bunker: Personal Website." />
 
    <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
